force-app/main/default/objects/Account/fields/Archived_File__c.field-meta.xml
<CustomField>
    <fullName>Archived_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Archived_File</label>
    <referenceTo>Archived_File__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>