force-app/main/default/objects/Account/fields/Deal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Deal_Stage__c</fullName>
    <label>Deal Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>ProjectA-Val1</fullName>
            </value>
            <value>
                <fullName>ProjectA-Val2</fullName>
            </value>
            <value>
                <fullName>Hotfix-Val1</fullName>
            </value>
            <value>
                <fullName>Hotfix-Val2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>