force-app/main/default/objects/Account/fields/Field_with_GVS__c.field-meta.xml
<CustomField>
    <fullName>Field_with_GVS__c</fullName>
    <label>Field with GVS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>New_GVS</valueSetName>
    </valueSet>
</CustomField>