force-app/main/default/objects/Account/fields/Field_with_PL_to_promote__c.field-meta.xml
<CustomField>
    <fullName>Field_with_PL_to_promote__c</fullName>
    <label>Field with PL to promote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Promoted_GVS</valueSetName>
    </valueSet>
</CustomField>