force-app/main/default/objects/Account/fields/MTDT_E2E_Acc_Field__c.field-meta.xml
<CustomField>
    <fullName>MTDT_E2E_Acc_Field__c</fullName>
    <label>MTDT E2E Acc Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>