force-app/main/default/objects/Account/fields/MTDT_E2E_Pick__c.field-meta.xml
<CustomField>
    <fullName>MTDT_E2E_Pick__c</fullName>
    <label>MTDT E2E Pick</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alpha</fullName>
                <default>true</default>
                <label>Alpha</label>
            </value>
            <value>
                <fullName>Beta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>