force-app/main/default/objects/Account/fields/MTDT_E2E_Smart__c.field-meta.xml
<CustomField>
    <fullName>MTDT_E2E_Smart__c</fullName>
    <description>source description</description>
    <label>Smart E2E (src)</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>