force-app/main/default/objects/Account/fields/MTDT_GVS_Probe__c.field-meta.xml
<CustomField>
    <fullName>MTDT_GVS_Probe__c</fullName>
    <label>MTDT GVS Probe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MTDT_E2E_GVS</valueSetName>
    </valueSet>
</CustomField>