force-app/main/default/objects/Account/fields/MTDT_GvsPick66__c.field-meta.xml
<CustomField>
    <fullName>MTDT_GvsPick66__c</fullName>
    <label>MTDT GVS Pick66</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MTDT_GVS66</valueSetName>
    </valueSet>
</CustomField>