force-app/main/default/objects/Account/fields/MTDT_Pick66__c.field-meta.xml
<CustomField>
    <fullName>MTDT_Pick66__c</fullName>
    <label>MTDT Pick66</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alpha</fullName>
                <default>true</default>
                <label>Alpha</label>
            </value>
            <value>
                <fullName>Gamma</fullName>
            </value>
            <value>
                <fullName>Iota</fullName>
            </value>
            <value>
                <fullName>Beta</fullName>
                <isActive>false</isActive>
                <label>Beta</label>
            </value>
            <value>
                <fullName>Delta</fullName>
                <isActive>false</isActive>
                <label>Delta</label>
            </value>
            <value>
                <fullName>Epsilon</fullName>
                <isActive>false</isActive>
                <label>Epsilon</label>
            </value>
            <value>
                <fullName>Eta</fullName>
                <isActive>false</isActive>
                <label>Eta</label>
            </value>
            <value>
                <fullName>Theta</fullName>
                <isActive>false</isActive>
                <label>Theta</label>
            </value>
            <value>
                <fullName>Zeta</fullName>
                <isActive>false</isActive>
                <label>Zeta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>