force-app/main/default/objects/Account/fields/MtdtQaIaGvsFldlocb31a50__c.field-meta.xml
<CustomField>
    <fullName>MtdtQaIaGvsFldlocb31a50__c</fullName>
    <label>MtdtQaIaGvsFldlocb31a50</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MtdtQaIaGvslocb31a50</valueSetName>
    </valueSet>
</CustomField>