force-app/main/default/objects/Account/fields/Stored_Id__c.field-meta.xml
<CustomField>
    <fullName>Stored_Id__c</fullName>
    <label>Stored Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>