force-app/main/default/objects/Account/fields/Synced_Id__c.field-meta.xml
<CustomField>
    <fullName>Synced_Id__c</fullName>
    <label>Synced Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>