force-app/main/default/objects/Account/recordTypes/Enterprise.recordType-meta.xml
<RecordType>
    <fullName>Enterprise</fullName>
    <active>true</active>
    <description>Enterprise segment accounts</description>
    <label>Enterprise</label>
</RecordType>