force-app/main/default/objects/Account/recordTypes/MTDT_E2E_RT.recordType-meta.xml
<RecordType>
    <fullName>MTDT_E2E_RT</fullName>
    <active>true</active>
    <description>rt source desc</description>
    <label>RT src</label>
</RecordType>