force-app/main/default/objects/Account/recordTypes/SmartCheck_RT.recordType-meta.xml
<RecordType>
    <fullName>SmartCheck_RT</fullName>
    <active>false</active>
    <label>SmartCheck RT</label>
</RecordType>