force-app/main/default/objects/Account/validationRules/DO_NOT_USE_check.validationRule-meta.xml
<ValidationRule>
    <fullName>DO_NOT_USE_check</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Active__c,&apos;DO NOT USE&apos;)</errorConditionFormula>
    <errorMessage>Please do not use this value in Active field</errorMessage>
</ValidationRule>